# eduplatform_backend

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  README.mdgit  alembic.ini  docker-compose.yml  pyproject.toml  structure.txt
alembic/: env.py
alembic/versions/: 001_create_users_table.py  2025_10_07_1106-e9eefc91f7a4_add_courses_and_lessons_tables.py  2025_10_10_2201-e879067a599e_add_notifications_table.py
monitoring/: prometheus.yml
scripts/: init_db.py  init_kafka_topics.py  seed_data.py
services/api_gateway/: main.py
services/api_gateway/app/: config.py
services/api_gateway/app/middleware/: rate_limit.py
services/api_gateway/app/routes/: proxy.py
services/course_service/: main.py
services/course_service/app/models/: __init__.py  course.py  lesson.py
services/course_service/app/repositories/: course_repository.py
services/course_service/app/routes/: __init__.py  courses.py
services/course_service/app/schemas/: course.py
services/notification_service/: main.py
services/notification_service/app/handlers/: user_events.py
services/notification_service/app/models/: notification.py
services/notification_service/app/repositories/: notification_repository.py
services/notification_service/app/routes/: __init__.py  notifications.py
services/notification_service/app/schemas/: __init__.py  notification.py
services/user-service/app/models/: user.py
services/user-service/app/routes/: auth.py
services/user-service/app/schemas/: user.py
services/user-service/app/services/: auth_service.py  main.py
services/user_service/: main.py
services/user_service/app/repositories/: user_repository.py
services/user_service/app/routes/: auth.py  users.py
services/user_service/app/services/: auth_service.py  email_service.py  main.py
shared/: __init__.py
shared/config/: __init__.py  base.py  database.py  kafka.py  kafka_topics.yml  rabbitmq.py  redis.py
shared/database/: __init__.py  base.py  connection.py  repository.py
shared/dependencies/: __init__.py  auth.py
shared/events/: __init__.py  base.py  file_notification_events.py  progress_events.py  user_events.py
shared/exceptions/: __init__.py  auth.py  base.py
shared/messaging/: __init__.py  kafka_consumer.py  kafka_producer.py
shared/utils/: __init__.py  security.py  validators.py
